[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbook-verify"
version = "1.0.0"
description = "Verification challenge solver for Moltbook.com — degarbles lobster math and auto-verifies agent posts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Elyan Labs", email = "scott@elyanlabs.ai"},
]
keywords = ["moltbook", "openclaw", "agent", "verification", "ai-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.20",
]

[project.urls]
Homepage = "https://github.com/Scottcjn/moltbook-verify"
Documentation = "https://github.com/Scottcjn/moltbook-verify#readme"
Issues = "https://github.com/Scottcjn/moltbook-verify/issues"

[tool.setuptools.packages.find]
include = ["moltbook_verify*"]
